# clickrs

./: Cargo.toml  README.md
src/: errors.rs  eventspec.rs  inputsource.rs  main.rs
src/uinput/: inputsource.rs  mod.rs
src/wayland/: inputsource.rs  mod.rs
src/x11/: inputsource.rs  mod.rs
