[package]
name = "clickrs"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT"
edition = "2018"
description = "X11 automated keypresser"

[dependencies]
log = "0.4"
loggerv = "0.7"
clap = { version = "3", default-features = false, features = ["color", "std", "cargo"] }
sys-info = "0.9"
regex = { version = "1", default-features = false, features = ["std", "unicode-bool", "unicode-case", "unicode-gencat"] }
time = "0.3"
once_cell = "1"
anyhow = "1"
x11 = { version = "2", features = ["xlib", "xtest" ] }
