[package]
name = "clickrs"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Linux automated keypresser"

[features]
default = ["uinput"]
x11 = ["dep:x11"]
uinput = ["dep:uinput", "dep:evdev"]

[dependencies]
log = "0.4"
loggerv = "0.7"
clap = { version = "3", default-features = false, features = ["std", "cargo"] }
sys-info = "0.9"
time = "0.3"
anyhow = "1"
x11 = { version = "2", features = ["xlib", "xtest" ], optional = true }
uinput = { version = "0.1", optional = true }
evdev = { version = "0.12", optional = true }
